@@ -1,11 +1,16 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.23
 Date: 2025-07-11
+  Features:
+    - Added late game ion chromatography recipes for rhenium and palladium
   Changes:
+    - Reduced output of rhenium recipe
     - Updated rhodium recipe chain
+    - Photodiode and photovoltaic cell now require arsenic iodide
   Bugfixes:
     - Fixed platinum recipe chain
     - Fixed that some recipes could not be crafted in steel and electric furnace
+    - Potassium cyanide can now be crafted on chemical plant
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.22
 Date: 2025-07-04
